--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -1,6 +1,6 @@
 name: Snyk Analysis
 env:
-  DOTNET_VERSION: '8.x'                     # la versión de .NET
+  DOTNET_VERSION: '8.x'
 on: push
 jobs:
   security:
@@ -12,12 +12,15 @@ jobs:
       - name: Configurando la versión de NET
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: ${{ env.DOTNET_VERSION }}  
-      - name: Snyk monitor
-        run: snyk code test --sarif-file-output=snyk.sarif
+          dotnet-version: ${{ env.DOTNET_VERSION }}
+      - name: Instalar snyk-to-html
+        run: npm install -g snyk-to-html
+      - name: Snyk test (dependencias)
+        run: snyk test --json | snyk-to-html -o dependencies-test-results.html
         env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}          
-      - name: Upload result to GitHub Code Scanning
-        uses: github/codeql-action/upload-sarif@v3
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      - name: Subir artefacto HTML
+        uses: actions/upload-artifact@v4
         with:
-          sarif_file: snyk.sarif
+          name: snyk-html-report
+          path: dependencies-test-results.html
